# OpenCV-with-CPP-2024

./: README.md
00-Imread/: CMakeLists.txt  main.cpp
